# myPX

./: .env-example  .gitignore  LICENSE  main.py  package-lock.json  package.json  pyproject.toml  req.txt  start.bat
bot/config/: config.py
bot/core/: ad_watcher.py  notpx_api_checker.py  notpxbot.py  registrator.py  tg_mini_app_auth.py
bot/core/canvas_updater/: centrifuge.py  dynamic_canvas_renderer.py  exceptions.py  websocket_manager.py
bot/core/poh_solver/: magic.wasm  main.js  wasm_handler.js
bot/utils/: accounts_manager.py  banner_animation.py  decorators.py  json_manager.py  launcher.py  logger.py  ua_generator.py
windows_scripts/: install.ps1  uninstall.ps1
